--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <div id="header">Fejléc</div>
+        <div id="nav">Navigácio</div>
+        <div id="main">Fö oldal</div>
+        <div id="sidebar">Jobb oldal</div>
+        <div id="footer">Lábléc</div>
+
+    </div>
 </body>
 </html>
